--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ navbar-links:
   About Me: "about"
   Publications: "pubs"
   Experience: "experiences"
+  Awards: "awards"
   Good Reads: "goodreads" 
 
 # Image to show in the navigation bar - image must be a square (width = height)
